tests/NormalTests/paczka1/small_fuzzy/24967324.err
Error in line 7: AdI=Fem S873 14,1
Error in line 2: Rz4auZlTcy S873 33,4
Error in line 12: yojlsd A364 81,9
